[fix] Startup scripts

--- a/release/contrib/systemd/duniter.service
+++ b/release/contrib/systemd/duniter.service
@@ -4,12 +4,12 @@ After=network.target
 
 [Service]
 # Should be set to web in order to start with web GUI
-Environment=DUNITER_WEB=
-Environment=DUNITER_HOME="/var/lib/duniter"
-Environment=DUNITER_DATA="duniter_default"
+Environment="DUNITER_WEB="
+Environment="DUNITER_HOME=/var/lib/duniter"
+Environment="DUNITER_DATA=duniter_default"
 # If using a key file, DUNITER_OPTS can be defined like so:
-#Environment=DUNITER_OPTS=--keyfile "/etc/duniter/keys.yml"
-Environment=DUNITER_OPTS=
+#Environment="DUNITER_OPTS=--keyfile /etc/duniter/keys.yml"
+Environment="DUNITER_OPTS="
 Group=duniter
 User=duniter
 Type=forking
